tests/paczka1/small_fuzzy/15891160.err
Error in line 12: S70 A854 88,4
Error in line 5: gDHgCIA6 S326 10,4
